--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -14,6 +14,10 @@
                     </div>
 
                 </div>
+                <!--If product list empty then display a message to the user-->
+                <div *ngIf="products?.length == 0" class="alert alert-warning col-md-12" role="alert">
+                    No products found.
+                </div>
             </div>
         </div>
     </div>
