--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -2,6 +2,8 @@
     <div class="section-content section-content-p30">
         <div class="container-fluid">
 
+            <div *ngIf="cartItems.length > 0">
+
             <table class="table table-bordered">
                 <tr>
                     <th width="20%">Product Image</th>
@@ -36,6 +38,11 @@
                 </tr>
 
             </table>
+        </div>
+        <!--if cartitem is empty then display a message-->
+        <div *ngIf="cartItems.length ===0" class="älert alert warning col-md-12" role="alert">
+            Your shopping cart is empty.
+        </div>
 
         </div>
     </div>
