remove items from cart

--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -33,7 +33,7 @@
                                 </div>
 
                                 <div class="col">
-                                    <button class="btn btn-primary btn-sm">
+                                    <button (click)="decrementQuantity(tempCartItem)" class="btn btn-primary btn-sm">
                                         <i class="fas fa-minus"></i>
                                     </button>
                                 </div>
@@ -41,7 +41,7 @@
                                 <div class="col-8"></div>
                             </div>
                         </div>
-
+                        <button (click)="remove(tempCartItem)" class="btn btn-primary btn-sm mt-2">Remove</button>
                         <p class="mt-2">Subtotal: {{ tempCartItem.quantity * tempCartItem.unitPrice | currency: 'USD' }}</p>
                     </td>
                 </tr>
