--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -15,7 +15,7 @@
                                 <input formControlName="firstName" type="text">
                                 <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)" class="alert alert-danger mt-1">
 
-                                    <div *ngIf="firstName.errors.required">
+                                    <div *ngIf="firstName.errors.required || firstName.errors.notOnlyWhitespace">
                                         First Name is required
                                     </div>
 
@@ -36,7 +36,7 @@
 
                                 <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" class="alert alert-danger mt-1">
 
-                                    <div *ngIf="lastName.errors.required">
+                                    <div *ngIf="lastName.errors.required || lastName.errors.notOnlyWhitespace">
                                         Last Name is required
                                     </div>
 
@@ -57,7 +57,7 @@
 
                                 <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger mt-1">
 
-                                    <div *ngIf="email.errors.required">
+                                    <div *ngIf="email.errors.required || email.errors.notOnlyWhitespace">
                                         Email is required
                                     </div>
 
