--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -4,28 +4,48 @@
         <div class="card mt-5">
           <div class="card-body">
             <h5 class="card-title">Sign In</h5>
-            <form>
+            <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
               <div class="form-group">
                 <label for="usernameOrEmail">Username or Email</label>
                 <input
                   type="text"
-                  id="usernameOrEmail"
                   class="form-control"
-                  name="usernameOrEmail"
-                  required
+                  formControlName="usernameOrEmail"
                 />
+                <div *ngIf="usernameOrEmail.invalid && (usernameOrEmail.dirty || usernameOrEmail.touched)" class="alert alert-danger mt-1">
+
+                    <div *ngIf="usernameOrEmail.errors.required || usernameOrEmail.errors.notOnlyWhitespace">
+                        Username or Email is required
+                    </div>
+
+                    <div *ngIf="usernameOrEmail.errors.minlength">
+                        Username or Email must be at least 2 characters long
+                    </div>
+                </div>
               </div>
               <div class="form-group">
                 <label for="password">Password</label>
                 <input
                   type="password"
-                  id="password"
                   class="form-control"
-                  name="password"
-                  required
+                  formControlName="password"
                 />
+                <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger mt-1">
+
+                    <div *ngIf="password.errors.required || password.errors.notOnlyWhitespace">
+                        Password is required
+                    </div>
+
+                    <div *ngIf="password.errors.minlength">
+                        Password must be at least 2 characters long
+                    </div>
               </div>
+            </div>
               <button type="submit" class="btn btn-primary">Sign In</button>
+              <div *ngIf="errorMessage" class="alert alert-danger mt-3">
+                {{ errorMessage }}
+              </div>
+    
             </form>
           </div>
         </div>
