add functionality to store user data in localstorage and get the details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
           <div class="header-wrap">
             <app-search></app-search>
-            <app-login-status></app-login-status>
+            <app-signin-status></app-signin-status>
             <app-cart-status></app-cart-status>
           </div>
           <div class="account-wrap"></div>
